infra/k3s/4-ingress-monitoring/Versuch/ingress-controller.yml
#ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - http:
    paths:
    - path: /web-app
      pathType: Prefix
      backend:
        service:
           name: lb-service-1
           port:
             number: 8080
    # - path: /web-app
    #   pathType: Prefix
    #   backend:
    #     service:
    #       name: lb-service-2
    #       port:
    #       number: 80
---
